docs/api/qiskit/0.39/qiskit.primitives.EstimatorResult.mdx
---
title: EstimatorResult (v0.39)
description: API reference for qiskit.primitives.EstimatorResult in qiskit v0.39
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.primitives.EstimatorResult
---

# EstimatorResult

<Class id="qiskit.primitives.EstimatorResult" isDedicatedPage={true} github="https://github.com/qiskit/qiskit/tree/stable/0.22/qiskit/primitives/base/estimator_result.py" signature="EstimatorResult(values, metadata)" modifiers="class">
  Bases: `qiskit.primitives.base.base_result.BasePrimitiveResult`

  Result of Estimator.

  ```python
  result = estimator.run(circuits, observables, params).result()
  ```

  where the i-th elements of `result` correspond to the circuit and observable given by `circuits[i]`, `observables[i]`, and the parameter values bounds by `params[i]`. For example, `results.values[i]` gives the expectation value, and `result.metadata[i]` is a metadata dictionary for this circuit and parameters.

  **Parameters**

  *   **values** (*np.ndarray*) – The array of the expectation values.
  *   **metadata** (*list\[dict]*) – List of the metadata.

  ## Methods

  <span id="qiskit-primitives-estimatorresult-decompose" />

  ### decompose

  <Function id="qiskit.primitives.EstimatorResult.decompose" signature="EstimatorResult.decompose()">
    Generate single experiment result objects from self.
  </Function>

  ## Attributes

  ### experiments

  <Attribute id="qiskit.primitives.EstimatorResult.experiments">
    Experiment data dicts in any inheriting result dataclass.
  </Attribute>

  ### num\_experiments

  <Attribute id="qiskit.primitives.EstimatorResult.num_experiments">
    Number of experiments in any inheriting result dataclass.

    **Return type**

    `int`
  </Attribute>

  ### values

  <Attribute id="qiskit.primitives.EstimatorResult.values" attributeTypeHint="np.ndarray[Any, np.dtype[np.float64]]" />

  ### metadata

  <Attribute id="qiskit.primitives.EstimatorResult.metadata" attributeTypeHint="list[dict[str, Any]]" />
</Class>

